<resources>

    <string name="app_name">Draw Game</string>
    <string name="submit">Submit</string>

    <!--Icons-->
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="undo">Undo</string>


    <!--Brushes-->
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

</resources>
